<resources>
    <string name="app_name">NeWork</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="user_avatar">User avatar</string>
    <string name="post_menu">Post menu</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="author_job">%1$s from %2$s</string>
    <string name="null_job">undefined workplace</string>
    <string name="published_time">published time</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="description_media">Media attachment</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select a photo</string>
    <string name="description_select_audio">Select an audio</string>
    <string name="description_select_video">Select a video</string>
    <string name="description_take_photo">Take a photo</string>
    <string name="menu_save">Save</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="authorization">Authorization</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="repeat_password">password (repeat)</string>
    <string name="logout">Log out</string>
    <string name="error_blank_username">Enter username</string>
    <string name="error_blank_password">Enter password</string>
    <string name="error_blank_auth">Enter username and password</string>
    <string name="error_blank_fields">Fill in all the fields</string>
    <string name="error_passwords">Enter the same password in both fields</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="incorrect_credentials">Incorrect login and/or password. Please, try again</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="text_here">Text here</string>
    <string name="registration">Registration</string>
    <string name="add_post">Add a post</string>
    <string name="add_event">Add an event</string>
    <string name="add_edit_event">Add/edit an event</string>
    <string name="new_post">New post</string>
    <string name="add_edit_post">Add/edit post</string>
    <string name="new_event">New event</string>
    <string name="not_registered">Not registered?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reg_successful">Registration successful.\nWelcome!</string>
    <string name="auth_successful">Authorization successful.\nWelcome!</string>
    <string name="logout_successful">You have logged out</string>
    <string name="pick_avatar">Click on an avatar to pick a picture</string>
    <string name="empty_post">Post can\'t be empty</string>
    <string name="empty_event">Event can\'t be empty</string>
    <string name="participate">I\'m in!</string>
    <string name="participants">Participants: %1$s</string>
    <string name="event_type_datetime">%1$s event date:\n%2$s</string>
    <string name="speakers">Speakers: %1$s</string>
    <string name="retry">Retry</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="online">Online</string>
    <string name="get_link">Link: %1$s</string>
    <string name="play_button">Play button</string>
    <string name="pause_button">Pause button</string>
    <string name="stop_button">Stop button</string>
    <string name="video">Video</string>
    <string name="attachment">Attachment</string>
    <string name="link">Link</string>
    <string name="add_job">Add a job</string>
    <string name="add_edit_job">Add/edit a job</string>
    <string name="delete_job">delete a job</string>
    <string name="job_start_end">From %1$s to %2$s</string>
    <string name="job_start">Since %1$s</string>
    <string name="user_profile">User profile</string>
    <string name="from">From</string>
    <string name="until">Until</string>
    <string name="job_title">Job title</string>
    <string name="job_position">Job position</string>
    <string name="empty_participants">No one is going to take part in this event at the moment</string>
    <string name="empty_post_likers">No one liked this post yet.\nBe the first one!</string>
    <string name="empty_event_likers">No one liked this event yet.\nBe the first one!</string>
    <string name="empty_event_speakers">This event has no speakers now</string>
</resources>