<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_posts">

    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.grigorev.diploma.activity.PostsFragment"
        android:label="@string/posts"
        tools:layout="@layout/fragment_posts" >
        <action
            android:id="@+id/action_navigation_posts_to_newPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_navigation_posts_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_navigation_posts_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.grigorev.diploma.activity.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/newPostFragment"
        android:name="com.grigorev.diploma.activity.NewPostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_new_post" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.grigorev.diploma.activity.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.grigorev.diploma.activity.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>

</navigation>