<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    app:cardCornerRadius="@dimen/item_corner_radius"
    app:cardElevation="@dimen/fab_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_spacing">

        <ImageView
            android:id="@+id/authorAvatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/author_job"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/authorAvatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/published_time"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/authorAvatar"
            app:layout_constraintTop_toBottomOf="@id/author" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/post_menu"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="authorAvatar,published,menu" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:text="@string/event_type_datetime"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speakers"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:clickable="true"
            android:contentDescription="@string/like"
            android:text="@string/speakers"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_person_pin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="speakers, date_time" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:autoLink="web"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="Post content" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:autoLink="web"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:text="@string/get_link" />

        <ImageView
            android:id="@+id/image_attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:paddingTop="@dimen/attachment_spacing"
            android:paddingBottom="@dimen/attachment_spacing"
            android:visibility="gone"
            android:contentDescription="@string/attachment"
            app:layout_constraintStart_toStartOf="@id/link"
            app:layout_constraintTop_toBottomOf="@id/link"
            tools:srcCompat="@tools:sample/avatars"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="image_attachment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:checkable="true"
            android:contentDescription="@string/like"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_like_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/participate"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/participate"
            android:text="@string/participate"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_check_box"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintTop_toBottomOf="@id/footer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/participants"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:clickable="true"
            android:contentDescription="@string/participants"
            android:text="@string/participants"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
