<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints=""
            android:hint="@string/job_title" />

        <EditText
            android:id="@+id/job_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints=""
            android:hint="@string/job_position" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editStartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/from"
            android:inputType="date"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingTop="@dimen/common_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:text="@tools:sample/date/ddmmyy" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEndLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/until"
            android:inputType="date"
            android:paddingHorizontal="@dimen/common_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:text="@tools:sample/date/ddmmyy" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/link"
            android:inputType="text"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingTop="@dimen/common_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:text="@tools:sample/lorem" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>